Adicionando mais um GET na  operação da Frequencia para consultarmos a frequencia dos alunos e corrigindo a import do PATCH
